BISERVER-9760 Images and css files for the scheduled generated contents needs to be stored in the JCRrepository